enum-str-conv/tests/ui/compile_fail_6.stderr
error: expected `=`
 --> tests/ui/compile_fail_6.rs:7:40
  |
7 |     #[enum_str_conv(error = (), unknown(unknown_fn))]
  |                                        ^
